# datafusion-objectstore-s3

./: .gitignore  Cargo.toml  README.md  run_test_mino.sh
.github/workflows/: rust.yml  test.yml
src/: catalog.rs  error.rs  lib.rs
src/object_store/: aws.rs  cache.rs  mod.rs  parquet.rs  s3.rs  s3x.rs  worker.rs
