[package]
edition = "2021"
name = "datafusion-objectstore-s3"
description = "S3 as an ObjectStore for Datafusion"
version = "0.1.0"
homepage = "https://github.com/datafusion-contrib/datafusion-objectstore-s3"
repository = "https://github.com/datafusion-contrib/datafusion-objectstore-s3"
readme = "README.md"
authors = ["Matthew Turner <matthew.m.turner@outlook.com>", "Michael Seddon <seddonm1@gmail.com>"]
license = "Apache-2.0"
keywords = [ "arrow", "query", "sql", "datafusion" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datafusion_objectstore_s3"
path = "src/lib.rs"

# https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 2

[dependencies]
datafusion-data-access = { git = "https://github.com/apache/arrow-datafusion.git", branch = "master" }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt"] }
rust-s3 = { git = "https://github.com/mateuszkj/rust-s3.git", branch = "master" }
chrono = { version = "0.4", default-features = false }
parking_lot = "0.12"
byteorder = "1"
num_cpus = "1"
bytes = "1"
log = "0.4"

[dev-dependencies]
test-log = "0.2.10"
env_logger = "0.9.0"
arrow = { version = "11.1.0", features = ["prettyprint"] }
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", branch = "master" }
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
