[package]
edition = "2021"
name = "datafusion-objectstore-s3"
description = "S3 as an ObjectStore for Datafusion"
version = "0.2.0"
homepage = "https://github.com/datafusion-contrib/datafusion-objectstore-s3"
repository = "https://github.com/datafusion-contrib/datafusion-objectstore-s3"
readme = "README.md"
authors = ["Matthew Turner <matthew.m.turner@outlook.com>", "Michael Seddon <seddonm1@gmail.com>"]
license = "Apache-2.0"
keywords = [ "arrow", "query", "sql", "datafusion" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datafusion_objectstore_s3"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.52"
aws-config = "0.9.0"
aws-sdk-s3 = "0.9.0"
aws-smithy-async = "0.39.0"
aws-smithy-types = "0.39.0"
aws-smithy-types-convert = { version = "0.39.0", features = ["convert-chrono"] }
aws-types = "0.9.0"
bytes = "1.1.0"
datafusion-data-access = { version = "8.0.0" }
futures = "0.3.19"
http = "0.2.6"
num_cpus = "1.13.1"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }

[dev-dependencies]
arrow = { version = "13", features = ["prettyprint"] }
datafusion = { version = "8.0.0" }

